unpackaged/main/default/objects/Account/fields/AccountFlag__c.field-meta.xml
<CustomField>
    <fullName>AccountFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The account flag means that there is one or more contact that has been flagged on the account. The contact is abusive or foul language or dangerous.</description>
    <inlineHelpText>One or more contact that has been flagged on the account.</inlineHelpText>
    <label>Account Flag</label>
    <type>Checkbox</type>
</CustomField>