unpackaged/main/default/objects/Account/fields/AccountFlagReason__c.field-meta.xml
<CustomField>
    <fullName>AccountFlagReason__c</fullName>
    <label>Account Flag Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excessive Returns</fullName>
            </value>
            <value>
                <fullName>Special Customer/Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>