unpackaged/main/default/objects/Account/fields/Billing_Contact_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Change_Date__c</fullName>
    <label>Billing Contact Change Date</label>
    <type>Date</type>
</CustomField>