unpackaged/main/default/objects/Account/fields/Billing_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>This contact doesn&#39;t exist for this account.</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>