unpackaged/main/default/objects/Account/fields/Billing_Contact_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Inactive__c</fullName>
    <formula>CONTAINS(Billing_Contact_ID__r.Email,&#39;inactive&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Inactive</label>
    <type>Checkbox</type>
</CustomField>