unpackaged/main/default/objects/Account/fields/BillingContactEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingContactEmailAddress__c</fullName>
    <formula>Billing_Contact_ID__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Email Address</label>
    <type>Text</type>
</CustomField>