unpackaged/main/default/objects/Account/fields/CID__c.field-meta.xml
<CustomField>
    <fullName>CID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Customer ID</description>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>