unpackaged/main/default/objects/Account/fields/Class_3_Credit_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_3_Credit_App_Status__c</fullName>
    <description>Class 3 indicated by AR User</description>
    <label>Class 3 (Credit App Status) </label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cred App Requested</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cred App Second Request</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Credit App -- Phone Call</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>References -- 1st Request</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>References -- 2nd request</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>References -- Phone Call</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Credit Card Requested</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Cred App Received</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Credit Approved</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>z Credit Denied</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Out for Approval</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Review - Credit Limit</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>App on File</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Guaranty on File</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Prepay</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>BAD DEBT</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Requested GOA</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Requested Additional Reference</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Credit App Final Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>