unpackaged/main/default/objects/Account/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Create Date/Time for Reporting</description>
    <formula>CreatedDate</formula>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>