unpackaged/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <defaultValue>0.01</defaultValue>
    <description>Credit Limit determined by AR User</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>