unpackaged/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <defaultValue>&#39;CC/PREPA&#39;</defaultValue>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BADDEBT</fullName>
                <label>Bad Debt -- Collection Issues</label>
            </value>
            <value>
                <fullName>Bankrupt</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Company Closed</label>
            </value>
            <value>
                <fullName>APPINPRO</fullName>
                <label>Credit Application in Process</label>
            </value>
            <value>
                <fullName>APPONFIL</fullName>
                <label>Credit Application on File</label>
            </value>
            <value>
                <fullName>CREDBAL</fullName>
                <label>Credt Balance &gt; 60 Days</label>
            </value>
            <value>
                <fullName>CC/PREPA</fullName>
                <label>Credit Card or Prepay Only</label>
            </value>
            <value>
                <fullName>CR HOLD</fullName>
                <label>Credit Hold</label>
            </value>
            <value>
                <fullName>DONOTDEL</fullName>
                <label>Do Not Delete</label>
            </value>
            <value>
                <fullName>DONOTUSE</fullName>
                <label>Do Not Use See Notepad</label>
            </value>
            <value>
                <fullName>EXCELLEN</fullName>
                <label>Excellent</label>
            </value>
            <value>
                <fullName>FINAL</fullName>
                <label>Final Demand</label>
            </value>
            <value>
                <fullName>FRAUD</fullName>
                <label>Fraud Account</label>
            </value>
            <value>
                <fullName>GOOD</fullName>
                <label>Good Credit</label>
            </value>
            <value>
                <fullName>HOLDOTHE</fullName>
                <label>HOLD - OTHER</label>
            </value>
            <value>
                <fullName>NOCRED</fullName>
                <label>I-Check/CC/Prepay Only</label>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
                <label>Inactive Account - Request Credt App</label>
            </value>
            <value>
                <fullName>NEW</fullName>
                <label>New Customer - Credit App/CC</label>
            </value>
            <value>
                <fullName>PAYPEND</fullName>
                <label>Payment Pending</label>
            </value>
            <value>
                <fullName>REACTIVA</fullName>
                <label>REACTIVATED ACCOUNT</label>
            </value>
            <value>
                <fullName>UPDATE</fullName>
                <label>Update Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>