unpackaged/main/default/objects/Account/fields/Custom_City__c.field-meta.xml
<CustomField>
    <fullName>Custom_City__c</fullName>
    <description>This field has been created to capture city from the online application form</description>
    <label>Custom City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>