unpackaged/main/default/objects/Account/fields/Custom_Country__c.field-meta.xml
<CustomField>
    <fullName>Custom_Country__c</fullName>
    <description>This field has been created to capture country from the online application form</description>
    <label>Custom Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>