unpackaged/main/default/objects/Account/fields/Custom_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Name__c</fullName>
    <label>Custom Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>