unpackaged/main/default/objects/Account/fields/Custom_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Custom_Postal_Code__c</fullName>
    <description>This field has been created to capture postal code from the online application form</description>
    <label>Custom Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>