unpackaged/main/default/objects/Account/fields/Custom_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Custom_State_Province__c</fullName>
    <description>This field has been created to capture State/Province from the online application form</description>
    <label>Custom State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>