unpackaged/main/default/objects/Account/fields/Custom_Street__c.field-meta.xml
<CustomField>
    <fullName>Custom_Street__c</fullName>
    <label>Custom Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>