unpackaged/main/default/objects/Account/fields/Customer_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Customer_Flagged__c</fullName>
    <description>Displays flag if a related Contact is flagged.</description>
    <formula>IF( NOT(Number_of_Contacts_Flagged__c = 0),IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0686A000006R7kI&amp;operationContext=CHATTER&amp;contentId=05T6A00000M7ND5&quot;, &quot;&quot;, 20, 20),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Flagged</label>
    <type>Text</type>
</CustomField>