unpackaged/main/default/objects/Account/fields/CustomerCohort__c.field-meta.xml
<CustomField>
    <fullName>CustomerCohort__c</fullName>
    <label>Customer Cohort</label>
    <length>10</length>
    <type>Text</type>
</CustomField>