unpackaged/main/default/objects/Account/fields/Esker_Account__c.field-meta.xml
<CustomField>
    <fullName>Esker_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this account is considered to be sent to Esker</description>
    <label>Esker Account</label>
    <type>Checkbox</type>
</CustomField>