unpackaged/main/default/objects/Account/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Account is Inactive or not</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>