unpackaged/main/default/objects/Account/fields/Invoice_Batch__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Batch__c</fullName>
    <defaultValue>&#39;46&#39;</defaultValue>
    <label>Invoice Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Mail</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Customer Request Mail</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>No Invoice Sent</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>EDI</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>I-Check</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>PAYPAL</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>E-Mail</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>FAX</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Failed Email</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>International</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>CANADA</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Credits</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Statements</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>Do Not Send Statement</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>DO NOT SEND TO BILLTRUST</label>
            </value>
            <value>
                <fullName>9999</fullName>
                <label>dummy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>