unpackaged/main/default/objects/Account/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <label>Invoice Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>