unpackaged/main/default/objects/Account/fields/InvoicesAreSenttoPortal__c.field-meta.xml
<CustomField>
    <fullName>InvoicesAreSenttoPortal__c</fullName>
    <description>If yes, invoices are sent by Portal</description>
    <inlineHelpText>If yes, invoices are sent by Portal</inlineHelpText>
    <label>Invoices Are Sent to Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>