unpackaged/main/default/objects/Account/fields/InvoicesSenttoPortal__c.field-meta.xml
<CustomField>
    <fullName>InvoicesSenttoPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoices Sent to Portal</label>
    <type>Checkbox</type>
</CustomField>