unpackaged/main/default/objects/Account/fields/Is_Portal_Customer_Old__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal_Customer_Old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines for Reporting if Customer is a Portal Customer</description>
    <label>Is Portal Customer Old</label>
    <type>Checkbox</type>
</CustomField>