unpackaged/main/default/objects/Account/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <description>Last Modified Date/Time for Reporting</description>
    <formula>LastModifiedDate</formula>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>