unpackaged/main/default/objects/Account/fields/Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a not the Order needs to be manually enteed rather then being sent to Esker</description>
    <inlineHelpText>r</inlineHelpText>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>