unpackaged/main/default/objects/Account/fields/NAICS__c.field-meta.xml
<CustomField>
    <fullName>NAICS__c</fullName>
    <description>NAISC</description>
    <label>NAICS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>