unpackaged/main/default/objects/Account/fields/Net_30__c.field-meta.xml
<CustomField>
    <fullName>Net_30__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Net 30</label>
    <type>Checkbox</type>
</CustomField>