unpackaged/main/default/objects/Account/fields/Number_of_Contacts_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts_Flagged__c</fullName>
    <description>Rollup of Contact Flagged</description>
    <label>Number of Contacts Flagged</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>