unpackaged/main/default/objects/Account/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <description>This field is required if &quot;Other&quot; is selected in Type field.</description>
    <label>Other Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>