unpackaged/main/default/objects/Account/fields/POfromPortal__c.field-meta.xml
<CustomField>
    <fullName>POfromPortal__c</fullName>
    <description>This is for customers where we get PO from Portal</description>
    <inlineHelpText>This is for customers where we get PO from Portal</inlineHelpText>
    <label>PO from Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>