unpackaged/main/default/objects/Account/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <description>Portal Link for Portal cusotmers</description>
    <label>Portal</label>
    <type>Url</type>
</CustomField>