unpackaged/main/default/objects/Account/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>Ranking</description>
    <label>Ranking</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>