unpackaged/main/default/objects/Account/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <description>Ship to ID</description>
    <externalId>true</externalId>
    <label>SID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>