unpackaged/main/default/objects/Account/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Busi Dev to enter Subtype of an Account without impacting Marketing</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Mfg.</fullName>
            </value>
            <value>
                <fullName>Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Machine Builder</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>