unpackaged/main/default/objects/Account/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <defaultValue>&#39;34&#39;</defaultValue>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>2% 10 Net 30</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>1.5 % 20 Net 30</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>1.5 % 10 Net 30</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>9% 10 Net 30</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>2% 20 Net 60</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>15% 10 Net 30</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>2% 15 Net 30</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>2% 30 Net 90</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>2% 10 Net 45</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Net 1</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Net 5</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Net 7</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Net 10</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Net 11</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Net 14</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Net 15</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Net 20</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Net 25</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Net 31</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Net 45</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Net 60</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Net 67</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Net 74</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Net 90</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Net 97</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Net 99</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Net 120</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>1% 20 Net 30</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Credit Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>