unpackaged/main/default/objects/Account/fields/Welcome_Letter__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Letter</label>
    <type>Checkbox</type>
</CustomField>