unpackaged/main/default/objects/Account/fields/X12_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Revenue__c</fullName>
    <description>12 Month Revenue</description>
    <label>12 Month Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>