unpackaged/main/default/objects/Account/validationRules/Billing_Address_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_is_required</fullName>
    <active>true</active>
    <description>Billing address is required</description>
    <errorConditionFormula>And(
OR($Profile.Name = &#39;AR User&#39;,$Profile.Name = &#39;Customer Support User&#39;, $Profile.Name = &#39;Customer Experience Specialist&#39;),
OR(
ISBLANK(BillingCity),
ISBLANK(BillingState),
ISBLANK(BillingStreet)
)
)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Billing address is required</errorMessage>
</ValidationRule>