unpackaged/main/default/objects/Account/validationRules/Cannot_Update_Dummy_Acct.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Dummy_Acct</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &#39;System Administrator&#39;, OR(Id =  &#39;0013u00000uIsB8&#39;,Id = &#39;0013u00000vlqE8&#39;))</errorConditionFormula>
    <errorMessage>This is a placeholder account and should not be updated.</errorMessage>
</ValidationRule>