unpackaged/main/default/objects/Account/validationRules/CRA_needs_to_capture_Shipping_Zip.validationRule-meta.xml
<ValidationRule>
    <fullName>CRA_needs_to_capture_Shipping_Zip</fullName>
    <active>true</active>
    <description>CRA users are required to capture at least SF Zip</description>
    <errorConditionFormula>And( $Profile.Name = &#39;CRA User&#39;,  IsBlank(ShippingPostalCode))</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Please enter a Shipping Zip</errorMessage>
</ValidationRule>