unpackaged/main/default/objects/Account/validationRules/Other_Type_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Type_is_required</fullName>
    <active>false</active>
    <description>Other Type is required if &quot;Other&quot; is selected in &quot;Type&quot; field.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Type , &quot;Other&quot;),
  ISBLANK( Other_Type__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Type__c</errorDisplayField>
    <errorMessage>Please fill out &quot;Other Type.&quot;</errorMessage>
</ValidationRule>