unpackaged/main/default/objects/Account/validationRules/Phone_can_only_contain_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_can_only_contain_Numbers</fullName>
    <active>true</active>
    <description>Only allow numbers to be put in this field</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Phone )),
NOT(ISNUMBER(Phone)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter numbers only for phone field.  Phone field will not accept &quot;(&quot; , &quot;)&quot; &quot;-&quot;, or spaces.</errorMessage>
</ValidationRule>