unpackaged/main/default/objects/Account/validationRules/Shipping_Address_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Address_is_required</fullName>
    <active>false</active>
    <description>Shipping Address is required.</description>
    <errorConditionFormula>And(
OR($Profile.Name = &#39;AR User&#39;,$Profile.Name = &#39;Customer Support User&#39;, $Profile.Name = &#39;Customer Experience Specialist&#39;),
OR(
ISBLANK(ShippingCity),
ISBLANK(ShippingState),
ISBLANK(ShippingStreet)
)
)</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Shipping Address is required.</errorMessage>
</ValidationRule>